# lentil-bhgc

./: .gitignore  LentilDevelopersGuide.md  README.md
CryptomatteArnold/: CHANGELOG.md  CMakeLists.txt  README.md  uigen.py
CryptomatteArnold/cryptomatte/: CMakeLists.txt  cryptomatte.cpp  cryptomatte.h  cryptomatte_filter.cpp  cryptomatte_manifest_driver.cpp  cryptomatte_shader.cpp  cryptomatte_tests.h
CryptomatteArnold/docs/: cryptomatte.md
CryptomatteArnold/tests/: cryptomatte_tests.py  tests.py
CryptomatteArnold/tests/cryptomatte/: 000_mtoa_basic.ass  001_sidecars.ass  002_multicam.ass  003_multicam_sidecars.ass  010_htoa_instances.ass  020_custom_cryptomattes.ass  030_jpeg_driver.ass
CryptomatteArnold/tests/cryptomatte/000_correct/: crypto_asset.exr  crypto_material.exr  crypto_object.exr
CryptomatteArnold/tests/cryptomatte/002_correct/: camera1_crypto_asset.exr  camera1_crypto_material.exr  camera1_special_chars.exr  camera2_crypto_asset.exr  camera2_crypto_material.exr  camera2_special_chars.exr  log.txt
CryptomatteArnold/tests/cryptomatte/010_correct/: result.exr
pota/: CMakeLists.txt
pota/cmake/: FindArnold.cmake
pota/src/: CMakeLists.txt  lentil.cpp  lentil.h  lentil_camera.cpp  lentil_camera.ui
pota/src/katana_args_backup/: lentil_camera.args
pota/tests/tl_redistribution_bug/: redistribution_bug_merged_aov.ass
